--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://neondb_owner:npg_xXJo38mvRpPE@ep-morning-rice-a43d4s1z-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-MAILTRAP_HOST=smtp.mailtrap.io
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_PORT=2525
-MAILTRAP_USER=your_username
-MAILTRAP_PASS=your_password
+MAILTRAP_USER=eb311fe2d66bc8
+MAILTRAP_PASS=b09fe2b061337b
